5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1807_2567.log
== TEST (2019-06-08 21:16:15) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:22:19) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
for i in range(a):
	c = b*(-a+1)
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:23:04) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
for i in range(a):
	c = b*(-(-a+1))
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:23:45) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
for i in range(a):
	c = b*(-(-a+i)
	print(c)
-- ERROR:
File "XXXX", line 9
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:23:58) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
for i in range(a):
	c = b*(-(-a+i))
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:25:23) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
for i in range(a):
	c = b*(a-(a-i))
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:28:02) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
	print(i)
for i in range(a):
	c = b*(a-(a-i))
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:28:33) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
	print(i)
for i in range(a):
	c = b*(a-(a-i))
	print(c)
	print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 21:30:43) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
for i in range(a+1):
	c = b*(a-(a-i))
	print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 21:31:11) 
-- CODE:
from numpy import *
a = int(input("digite n: "))
b = "*"
for i in range(a):
	c = b*(a-i)
	print(c)
for i in range(a+1):
	c = b*(a-(a-i))
	print(c)
-- EXECUTION TIME:
1.07066
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
